Fixed overflowing text

--- a/css/index.css
+++ b/css/index.css
@@ -181,9 +181,11 @@
 .skills {
 
     background-color: var(--secondary);
-    height: 10%;
+    height: 12%;
     width: 100%;
-    margin: 1.25%;
+    margin-top: 2%;
+    margin-left: 1.25%;
+    margin-right: 1.25%;
     opacity: 0;
     display: flex;
     flex-direction: row;
